# tips-prompt-manager

./: AGENTS.md  README.ja.md  README.md  README.txt  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml
src/tips_prompt_manager/: meta.py
